[package]
name = "wpe32c3a1"
version = "0.1.0"
authors = ["Heri Cahyono <heri@hericah.my.id>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [
    "esp32c3"
] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32c3"] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
##
embassy-executor = { version = "0.6.0", features = ["integrated-timers", "arch-riscv32"]}
embassy-time = "0.3.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
